--- a/Narcolepsy.Core/_Imports.razor
+++ b/Narcolepsy.Core/_Imports.razor
@@ -1,1 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
+@using Narcolepsy.Core.Http
+@using Narcolepsy.Core.ViewConfig
+@using Narcolepsy.Core.Interop
+@using Microsoft.JSInterop
+@using Narcolepsy.UiKit.Form
+@using Narcolepsy.UiKit.Typography
