--- a/Narcolepsy.App/wwwroot/css/app.css
+++ b/Narcolepsy.App/wwwroot/css/app.css
@@ -1,8 +1,34 @@
 ﻿@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
 
 body {
     font-family: Quicksand, Arial, serif
 }
+
+.material-symbols-rounded {
+    font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48
+}
+
+
+html, body, #app {
+    height: 100%;
+    margin: 0;
+}
+
+:root {
+    --color-primary-light: #396A64;
+    --color-primary: #254441;
+    --color-primary-dark: #1D3532;
+    --color-primary-darker: #0F1A19;
+    --color-accent: #80cbc4;
+    --color-gray: #bdbdbd;
+    --color-primary-text: white;
+    --color-light-gray: #eeeeee;
+    --color-text-dark: black;
+	--color-lighter-gray: #f5f5f5;
+    --color-gray-dark: #aaa;
+}
+
 
 #blazor-error-ui {
     background: lightyellow;
