--- a/Narcolepsy.Core/Components/Http/UrlMethodInput.razor.css
+++ b/Narcolepsy.Core/Components/Http/UrlMethodInput.razor.css
@@ -1,3 +1,46 @@
-﻿body
-{
+﻿.url-method-container {
+	grid-area: url;
+	display: flex;
+	flex-direction: row;
+	align-items: stretch;
 }
+
+.method-select {
+	font-family: inherit;
+	font-weight: 600;
+	padding: 7px 12px;
+	font-size: 1em;
+	border-radius: 0;
+	border: 1px solid var(--color-gray);
+	border-right: none;
+	outline: none;
+}
+
+.url-input {
+	border: 1px solid var(--color-gray);
+	outline: none;
+	font-family: inherit;
+	font-size: 0.9em;
+	padding: 8px 12px;
+	transition: outline 100ms linear, outline-offset 100ms linear;
+	flex-grow: 1;
+}
+
+	.url-input:focus {
+		outline: 2px solid var(--color-accent);
+		outline-offset: -2px;
+	}
+
+::deep .execute {
+	padding: 6px 18px;
+	width: 70px;
+	border-radius: 0;
+}
+
+	::deep .execute:hover {
+		background-color: var(--color-primary-dark);
+	}
+
+	::deep .execute:active {
+		background-color: var(--color-primary-darker);
+	}
