--- a/Narcolepsy.Core/Components/Http/RequestTabs/RequestHeaderTab.razor.css
+++ b/Narcolepsy.Core/Components/Http/RequestTabs/RequestHeaderTab.razor.css
@@ -1,7 +1,7 @@
 ﻿.header-editor {
 	display: grid;
 	align-items: center;
-	grid-template-columns: 1fr 1fr;
+	grid-template-columns: 1fr 1fr auto auto;
 	gap: 8px;
 	margin: 8px 0;
 }
@@ -19,6 +19,10 @@
 	padding: 18px;
 }
 
+.header-edit.invalid {
+	border-bottom: 2px solid #D32F2F;
+}
+
 .header-edit:focus {
 	border-bottom: 2px solid var(--color-accent);
 }
@@ -29,4 +33,61 @@
 
 .new .header-edit {
 	caret-color: transparent;
+	opacity: 0.5;
+}
+
+.header-button {
+	background: none;
+	border: none;
+	font-variation-settings: 'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 18;
+	font-size: 18px;
+	padding: 4px;
+	color: var(--color-primary-light);
+	border-radius: 50%;
+	cursor: pointer;
+	transition: background 100ms ease;
+	outline: none;
+}
+
+	.header-button:hover, .header-button:focus {
+		background: rgba(0,0,0,.12);
+	}
+
+	.header-button:active {
+		background: rgba(0,0,0,0.25);
+	}
+
+.header-button.transparent {
+	visibility: hidden;
+}
+
+.header-editor.new {
+	margin-right: 52px;
+}
+
+.note-button-container {
+	position: relative;
+}
+
+.header-note {
+	width: 200px;
+	position: absolute;
+	right: 18px;
+	top: 20px;
+	background: var(--color-accent);
+	color: black;
+	padding: 6px 8px;
+	border-radius: 2px;
+	z-index: 2;
+	font-size: 0.8em;
+	box-shadow: 0 0 2px rgba(0,0,0,0.4);
+	visibility: hidden;
+	opacity: 0;
+	transition: opacity 150ms ease 0ms, visibility 0s linear 150ms;
+}
+
+.note-button-container:hover .header-note {
+	opacity: 1;
+	visibility: visible;
+	transition: opacity 150ms ease 0ms, visibility 0s linear 0ms;
 }
