--- a/Narcolepsy.App/wwwroot/css/app.css
+++ b/Narcolepsy.App/wwwroot/css/app.css
@@ -9,6 +9,16 @@ body {
     font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48
 }
 
+::-webkit-scrollbar {
+    background: transparent;
+    width: 8px;
+    height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(0,0,0,0.25);
+}
+
 
 html, body, #app {
     height: 100%;
