--- a/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyTab.razor.css
+++ b/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyTab.razor.css
@@ -10,17 +10,13 @@
 	overflow: hidden;
 }
 
-.view-selection {
-	background: var(--color-lighter-gray);
-	border-top: 1px solid var(--color-gray);
-	border-bottom: 1px solid var(--color-gray);
+::deep .dropdown {
+	border: none !important;
+	border-right: 1px solid var(--color-gray) !important;
 }
 
-	.view-selection select {
-		background: transparent;
-		border: none;
-		font-family: inherit;
-		padding: 4px 8px;
-		font-weight: 500;
-		border-right: 1px solid var(--color-gray);
-	}
+.view-config {
+	border-top: 1px solid var(--color-gray);
+	border-bottom: 1px solid var(--color-gray);
+	background: var(--color-light-gray);
+}
