--- a/Narcolepsy.App/wwwroot/css/app.css
+++ b/Narcolepsy.App/wwwroot/css/app.css
@@ -5,6 +5,14 @@ body {
     font-family: Quicksand, Arial, serif
 }
 
+input {
+    border-radius: 0;
+}
+
+input, button, select {
+    margin: 0;
+}
+
 .material-symbols-rounded {
     font-variation-settings: 'FILL' 1, 'wght' 400, 'GRAD' 0, 'opsz' 48
 }
