--- a/Narcolepsy.Core/Components/Http/HttpView.razor
+++ b/Narcolepsy.Core/Components/Http/HttpView.razor
@@ -6,7 +6,8 @@
     <Tabs 
         Context="Context"
         Configuration="Configuration"
-        TabList="Configuration.RequestTabs" />
+        TabList="Configuration.RequestTabs"
+        StateId="http-tab-list-request"/>
 
     <ResponseView 
         Context="Context"
