--- a/Narcolepsy.Core/Components/Http/InfoBoxes/StatusCodeInfo.razor
+++ b/Narcolepsy.Core/Components/Http/InfoBoxes/StatusCodeInfo.razor
@@ -1,4 +1,4 @@
-﻿<span class="status-info @ColorClass">
+﻿<span class="status-info @ColorClass" title="@Context.StatusText">
     <span class="status-code">@Context.StatusCode</span>
     @Context.StatusText
 </span>
