--- a/Narcolepsy.Core/Components/Http/ResponseInfo.razor
+++ b/Narcolepsy.Core/Components/Http/ResponseInfo.razor
@@ -1,4 +1,5 @@
-﻿@using System.Text
+﻿@inherits ContextSensitiveComponent<IHttpRequestContext>
+@using System.Text
 @using Microsoft.JSInterop
 @using Narcolepsy.Platform.Rendering
 @inject IJSRuntime JsRuntime
@@ -19,19 +20,13 @@
 </div>
 @code {
     [Parameter]
-    public IHttpRequestContext Context { get; set; }
-
-    [Parameter]
     public HttpViewConfiguration Configuration { get; set; }
 
     private HttpResponse? Response => this.Context.Response.Value;
 
-
     protected override void OnInitialized() {
         base.OnInitialized();
-        this.Context.Response.ValueChanged += (_, _) => {
-            this.StateHasChanged();
-        };
+        this.UpdateOnChange(ctx => ctx.Response);
     }
 
 }
