--- a/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyTab.razor.css
+++ b/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyTab.razor.css
@@ -18,5 +18,5 @@
 .view-config {
 	border-top: 1px solid var(--color-gray);
 	border-bottom: 1px solid var(--color-gray);
-	background: var(--color-light-gray);
+	background: var(--color-lighter-gray);
 }
