--- a/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyViews/FormattedView.razor
+++ b/Narcolepsy.Core/Components/Http/ResponseTabs/ResponseBodyViews/FormattedView.razor
@@ -1,16 +1,14 @@
-﻿@using System.Text
+﻿@inherits ContextSensitiveComponent<IHttpRequestContext>
+@using System.Text
 @using Microsoft.JSInterop
 @using Narcolepsy.Core.Interop
 @inject IJSRuntime JsRuntime
+@inject NarcolepsyJs JsService
+
 <div class="response-text" @ref="EditorElement"></div>
 
 @code {
-    [Parameter]
-    public IHttpRequestContext Context { get; set; }
-
     private HttpResponse? Response => this.Context.Response.Value;
-
-    private NarcolepsyJs JsService;
 
     private MonacoEditor Editor;
 
@@ -18,12 +16,17 @@
 
     protected override async Task OnInitializedAsync() {
         await base.OnInitializedAsync();
+    }
 
-        this.JsService = new NarcolepsyJs(JsRuntime);
+    protected override async Task OnContextChangedAsync() {
+        await base.OnContextChangedAsync();
         this.Context.Response.ValueChanged += async (_, r) => {
             await this.SetModel();
             this.StateHasChanged();
         };
+
+        if (this.Editor is not null)
+            await this.SetModel();
     }
 
     protected override async Task OnAfterRenderAsync(bool firstRender) {
@@ -36,7 +39,10 @@
 
     private async Task SetModel() {
         // set the model
-        if (Response is null) return;
+        if (Response is null) {
+            await this.Editor.SetModel(await this.JsService.CreateTextModel("", "plaintext"));
+            return;
+        }
 
         // detect the language
         MonacoLanguage Language = MonacoLanguage.GetByContentTypeHeader(Response.ResponseHeaders.GetHeaderValue("Content-Type"));
