--- a/Narcolepsy.Core/Components/Http/UrlMethodInput.razor.css
+++ b/Narcolepsy.Core/Components/Http/UrlMethodInput.razor.css
@@ -11,13 +11,14 @@
 	padding: 7px 12px;
 	font-size: 1em;
 	border-radius: 0;
-	border: 1px solid var(--color-gray);
-	border-right: none;
+	border: none;
+	border-bottom: 1px solid var(--color-gray);
 	outline: none;
 }
 
 .url-input {
 	border: 1px solid var(--color-gray);
+	border-top: none;
 	outline: none;
 	font-family: inherit;
 	font-size: 0.9em;
